[tool.poetry]
name = "rag-demo"
version = "0.1.0"
description = ""
authors = ["Your Name <34923485+Haste171@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
langchain = "^0.2.6"
python-dotenv = "^1.0.1"
openai = "^1.35.10"
langchain-community = "^0.2.6"
pypdf = "^4.2.0"
chromadb = "^0.5.3"
tiktoken = "^0.7.0"
langchain-openai = "^0.1.14"
colorama = "^0.4.6"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
